feat: email verification on register
