# src/routes/auth.routes.ts
@@ -1,9 +1,10 @@
-import { Router } from "express"
-import { login, register } from "../controllers/auth.controller"
+import { Router } from "express";
+import { login, register, verifyRegister } from "../controllers/auth.controller";
 
-const router = Router()
+const router = Router();
 
-router.post("/register", register)
-router.post("/login", login)
+router.post("/register", register);
+router.post("/register/verify", verifyRegister);
+router.post("/login", login);
 
-export default router
+export default router;
